# ModulatedStrip

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TESTER_GUIDE.md  create_icon.py  deploy.bat
.github/workflows/: build.yml
Source/: AnalogMath.h  CompressorProcessor.h  CustomLookAndFeel.h  EQProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.h  PresetManager.h  SaturationProcessor.h  TextureGenerator.cpp  TextureGenerator.h
installer/: installer.nsi
